# enterplatform

./: .gitignore  appspec.yml  credentials.json  manage.py  mydatabase  pyproject.toml  requirements.txt  server.md
adminpage/: baseAdmin.py
banks/: admin.py  apps.py  models.py
banks/migrations/: 0001_initial.py
banners/: admin.py  models.py  serializers.py  urls.py  views.py
banners/migrations/: 0001_initial.py
common/: models.py
directmessages/: admin.py  apps.py  models.py
directmessages/migrations/: 0001_initial.py  0002_initial.py
donates/: admin.py  apps.py  models.py
donates/migrations/: 0001_initial.py  0002_initial.py
enterplatform/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
feeds/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_alter_worklog_video.py  0002_initial.py  0003_alter_feed_user.py  0003_worklog_likelists.py  0004_feed_worklogs.py  (+5 more)
follows/: models.py  serializers.py  urls.py  views.py
genres/: admin.py  apps.py  models.py
likelists/: apps.py  models.py  serializers.py  urls.py  views.py
medias/: admin.py  apps.py  models.py
notices/: admin.py  apps.py  models.py
reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
scripts/: after_install.sh  before_install.sh
tutorial/: admin.py  apps.py  models.py
uploads/: 화면설계서_v07.pptx
users/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
votes/: admin.py  apps.py  models.py
wallets/: admin.py  apps.py  models.py
(+34 files in other folders)
